  `-X/--recompress`.

- When supported by the CPU, a SIMD-friendly (using AVX2) algorithm is now used
  to scan input source code for `__DATE__` and `__TIME__` macros. This can
  decrease the number of CPU cycles for a direct cache hit with up to 15% in
  some cases.

- Added a new inode cache for file hashes, allowing computed hash values to be
  reused both within and between builds.

- (More to be written.)


ccache 3.7.9
------------
Release date: 2020-03-29

Bug fixes
~~~~~~~~~

- Fixed replacing of /dev/null when building as root with hard link mode
  enabled and using `-o /dev/null`.

- Removed incorrect assertion resulting in “ccache: error: Internal error in
  format” when using `-fdebug-prefix-map=X=` with X equal to `$PWD`.


Other
~~~~~

- Improved CUDA/NVCC support: Recognize `-dc` and `-x cu` options.

- Improved name of temporary file used in NFS-safe unlink.


ccache 3.7.8
------------
Release date: 2020-03-16

Bug fixes
~~~~~~~~~

- Use `$PWD` instead of the real CWD (current working directory) when checking
  for CWD in preprocessed output. This fixes a problem when `$PWD` includes a
  symlink part and the user has set `hash_dir = false`.

- Rewrote the Windows version of the lockfile routines. This should mitigate
  several problems with the old implementation.

- If `localtime_r` fails the epoch time is now logged instead of garbage.


Other
~~~~~

- Improved error message when a boolean environment variable has an invalid
  value.

- Improved the regression fix in ccache 3.7.5 related to not passing
  compilation-only options to the preprocessor.

- ccache’s PCH test suite now skips running the tests if it detects broken PCH
  compiler support.

- Fixed unit test failure on Windows.

- Fixed “stringop-truncation” build warning on Windows.

- Improved “x_rename” implementation on Windows.

- Improved removal of temporary file when rewriting absolute paths to relative
  in the dependency file.
