@@ -47,6 +47,11 @@ High-level summary of changes (work in progress)
 - Added a new inode cache for file hashes, allowing computed hash values to be
   reused both within and between builds.
 
+- Compiler diagnostic messages are now always cached in color, and ccache
+  strips the color codes on the fly when requested explicitly by command-line
+  option or when stderr does not refer to a TTY. This allows IDEs and terminals
+  to share cached compilation results.
+
 - (More to be written.)
 
 
